• haberland-zahlen/skript.latex   · Aus dem equation‐split‐Kontrukt ein multline gemacht. Das sah schon     richtig danach aus.
  · Die Vorlesung vom Donnerstag 23.11.

  · Dafür einen neuen Matheoperator für Diskriminanten definiert.


git-svn-id: https://svn.lug-jena.de/uni-skripte@562 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-zahlen/skript.latex
+++ b/haberland-zahlen/skript.latex
@@ -200,6 +200,7 @@
 \DeclareMathOperator{\card}{card}          % Kradinalität
 \DeclareMathOperator{\ggT}{ggT}
 \DeclareMathOperator{\Tr}{Tr}              % Trace/Spur
+\DeclareMathOperator{\disc}{Disc}          % Diskriminante
 
 \DeclareGraphicsRule{.1}{\ifpdf mps\else eps\fi}{*}{}
 
@@ -1159,16 +1160,14 @@ Wir multiplizierne die Gleichungen $as = e_{s}(a) s'$ über $s\in S$ auf:
 
   \begin{proof}
   Wegen
-    \begin{equation*}
-    \begin{split}
-      (x_{1}^{2}+x_{2}^{2}+&x_{3}^{2}+x_{4}^{2})
-         (y_{1}^{2}+y_{2}^{2}+y_{3}^{2}+y_{4}^{2}) \\ 
-         =&(x_{1}y_{1} + x_{2}y_{2}+ x_{3}y_{3} + x_{4}y_{4})^{2} +
-         (x_{1}y_{2}-x_{2}y_{1}+x_{3}y_{4} -x_{4}y_{3})^{2}\\ 
-         &+ (x_{1}y_{3}-x_{3}y_{1}+x_{4}y_{2}-x_{2}y_{4})^{2}
+    \begin{multline*}
+      (x_{1}^{2}+x_{2}^{2}+x_{3}^{2}+x_{4}^{2})
+         (y_{1}^{2}+y_{2}^{2}+y_{3}^{2}+y_{4}^{2}) \\
+         =(x_{1}y_{1} + x_{2}y_{2}+ x_{3}y_{3} + x_{4}y_{4})^{2} +
+         (x_{1}y_{2}-x_{2}y_{1}+x_{3}y_{4} -x_{4}y_{3})^{2}\\
+         + (x_{1}y_{3}-x_{3}y_{1}+x_{4}y_{2}-x_{2}y_{4})^{2}
          + (x_{1}y_{4}-x_{4}y_{1}+x_{2}y_{3}-x_{3}y_{2})^{2},
-    \end{split}
-    \end{equation*}
+    \end{multline*}
     genügt es zu zeigen, dass der Satz für die Primzahlen gilt: Der Fall $p=2$
     ist klar -- $2=0^{2}+0^{2}+1^{2}+1^{2}$.
 
@@ -2825,7 +2824,321 @@ Kettenbrüche im Englischen continues fractions.
   Dinge die auffallen: 1,2,4,2,1 sind symetrisch, die letzte Ziffer ist immer
   das Doppelte der ersten, in der Tabelle ergibt sich immer die
   Fundamentaleinheit.
+
+  % 23.11.
+
+  \begin{gather*}
+    \sqrt{2003} = [44;
+       \overline{1,3,12,1,1,6,2,1,2,1,3,6,7,1,43,1,7,6,3,1,2,1,2,6,1,1,12,3,1,88}]\\
+    \text{Fundamentaleinheit:~} 4\,344\,427\,204\,728\,362 +
+       97\,071\,569\,134\,791\,\cdot\sqrt{2003}
+  \end{gather*}
 \end{bsp}
+
+\subsection{Die Kettenbruchentwicklung reellquadratischer irrationaler Zahen}
+
+Sei $K=\Q(\sqrt{D}), D>1$, quadratfrei. Sei $\alpha\in K\setminus\Q$, dann
+existiert eine eindeutig bestimmte $a,b,c\in\Z$ mit
+\begin{enumerate}
+ \item $a>0$
+ \item $\ggT(a,b,c) = 1$
+ \item $a\alpha^{2}+b\alpha + c=0$
+\end{enumerate}
+
+\begin{defini}
+  Die \highl{Diskriminante} $\disc(\alpha)$ ist \gdwdef $\disc(\alpha) =
+  b^{2}-4ac$. Es gilt $\disc(\alpha)>0$.
+\end{defini}
+
+\begin{defini}
+  $\alpha\in K\setminus\Q$ heißt \highl{reduziert} \gdwdef $\alpha>1,
+  -1<\alpha'<0$ ($a=r+s\sqrt{D} \Rightarrow \alpha' =r-s\sqrt{D}, r,s\in\Q$)
+\end{defini}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item Äquivalent: $\alpha>1, -\frac{1}{\alpha'}>1$
+   \item Mit $\alpha$ ist auch $-\frac{1}{\alpha'}$ reduziert
+   \item $\sqrt{D}$ ist nicht reduziert, $-\sqrt{D}< -1$
+   \item Sei $\alpha=(\sqrt{D}- [\sqrt{D}])^{-1}, \alpha>1,
+    \alpha'=\frac{1}{-\sqrt{D}-[\sqrt{D}]}<0, \alpha'>-1$ ist auch klar.
+  \end{enumerate}
+\end{bemerk}
+
+\begin{fakt}
+  Für eine gegebene natürliche Zahl~$m$ existieren nur endlich viele redzierte
+  Zahlen~$\alpha_{i}$ mit $\disc(\alpha_{i})=m$.
+
+  \begin{proof}
+    Sei $\alpha$ reduziert und $\disc(\alpha)=m$.
+    \begin{gather*}
+      \alpha = \frac{-b+\epsilon\sqrt{m}}{2a},\quad \epsilon\in[-1,1]
+    \end{gather*}
+    Für $\epsilon=-1$ folgt $-b-\sqrt{m}>0, \alpha'=\frac{-b+\sqrt{m}}{2a}<0$.
+    Widerspruch. Also $\epsilon=+1$. Dann folgt
+    \begin{gather*}
+      -b+\sqrt{m}>2a>b+\sqrt{m}\qquad(0>\alpha'>-1)
+    \end{gather*}
+    Somit ist $b<0$ und $0< -b<\sqrt{m}$. Also nur endlich viele $b$.
+    $2a< -b+\sqrt{m}, a>0$ $\Rightarrow$ nur endlich viele $a$.
+    $m=b^{2}-4ac$ $\Rightarrow$ nur endlich viele $c$.
+  \end{proof}
+\end{fakt}
+
+\begin{defini}
+  Sei $GL(2,\Z) = \{(\begin{smallmatrix}a& b\\c& d\end{smallmatrix})\in
+  M(2,2;\Z)\colon \det=\pm1\}$.
+\end{defini}
+
+6 ist unendlich: $(\begin{smallmatrix}1& 1\\0& 1\end{smallmatrix})$ hat
+undenliche Ordnung.
+
+$(\begin{smallmatrix}0& 1\\1& 0\end{smallmatrix})$ ist Torsionselement. Sei
+$\alpha\in K\setminus\Q$ $g_{n}:=(\begin{smallmatrix}p_{n}& p_{n-1}\\ q_{n}&
+q_{n-1}\end{smallmatrix}), \det g_{n} = (-1)^{n+1}$
+
+Wir hatten gesehen
+\begin{gather*}
+  \alpha = \frac{p_{n-1}\alpha_{n}+p_{n-2}}{q_{n-1}\alpha_{n}+q_{n-2}}
+\end{gather*}
+$GL(2,\Z)$ operiert auf $K\setminus\Q$ vermöge
+\begin{gather*}
+  \begin{pmatrix}
+    a& b\\
+    c& d
+  \end{pmatrix}
+     \alpha := \frac{a\alpha + b}{c\alpha +d}
+\end{gather*}
+(gebrochenlineare Substitutionen)
+
+\begin{defini}
+  $\alpha, \beta\in K\setminus\Q$ heißen \highl{äquivalent} \gdwdef $\exists
+  g\in GL_{2}\Z\colon \beta=g\alpha$.
+\end{defini}
+
+\begin{bemerk}
+  Ist $\alpha\in K\setminus\Q$ und $\alpha_{n}$ der $n$-te Rest der
+  Kettenbruchentwicklung, also $\alpha=[a_{0}; a_{1},\dotsc,
+  a_{n-1},\alpha_{n}]$, so ist $\alpha_{n}$ äquivalent zu $\alpha$.
+\end{bemerk}
+
+\begin{fakt}
+  Sei $\alpha=[a_{0}; a_{1},\dotsc, a_{n-1},\alpha_{n}]$ wie oben, dann ist
+  die Diskriminante von $\alpha_{n}$ gleich der von $\alpha$.
+
+  \begin{proof}
+    Setze $h_{n}=(\begin{smallmatrix}a_{n}& 1\\1& 0\end{smallmatrix}) \in
+    GL_{2}\Z$
+    \begin{gather*}
+      h_{n}(\alpha_{n+1}) = \frac{a_{n}\alpha_{n+1}+1}{\alpha_{n+1}} = a_{n} +
+         \frac{1}{\alpha_{n+1}} = \alpha_{n}
+    \end{gather*}
+    Das heißt $h_{n}(\alpha_{n+1}) = \alpha_{n}$.
+
+    Wir zeigen: Die zahlen $\beta$ und $\gamma=\frac{m\beta+1}{\beta}$ haben
+    dieselbe Diskriminante ($m\geq1$).
+
+    Sei dazu $a\gamma^{2}+b\gamma+c = c$. $\Rightarrow$ $a(m\beta+1)^{2} +
+    b(m\beta+1)\beta + c\beta^{2} = 0$ $\Rightarrow$
+    $(\underbrace{am^{2}+bm+c}_{=A}) \beta^{2} + (\underbrace{2am+b}_{=B}) \beta +
+    \underbrace{a}_{=C} = 0$.
+
+    \begin{align*}
+      B^{2}+4AC  &= 4a^{2}m^{2} + 4abm + b^{2} - 4a^{2}m^{2}-4abm -4ac\\
+      & = b^{2}-4ac
+    \end{align*}
+    Das heißt $\disc(\beta)$ teil $\disc(\gamma)$
+
+    Die analoge Recchnugn für $\gamma$ und $\beta=(\begin{smallmatrix}m& 1\\1&
+    0\end{smallmatrix})^{-1}$ zu $\gamma$. \todo{hfw}
+  \end{proof}
+\end{fakt}
+
+\begin{fakt}
+  \begin{enumerate}
+   \item Ist $\alpha$ reduziert, so auch alle $\alpha_{n}$.
+   \item Die $\alpha_{n}$ sind reduziert für $n\gg1$.
+  \end{enumerate}
+
+  \begin{proof}
+    \begin{enumerate}
+     \item $\alpha=a_{n}+\frac{1}{\alpha_{n+1}}$ ($a_{n}=[\alpha_{n}]$),
+      $\alpha_{n+1}>1$.
+
+      Ist $\alpha>1$, $-1<\alpha<0$ und $\beta$ definiert durch
+      $\alpha=[\alpha]+\frac{1}{\beta}$, so ist $\beta>1$ und
+      $-\frac{1}{\beta'} = [\alpha] - \alpha' >1$
+
+     \item
+      \begin{align*}
+        \alpha &= \frac{p_{n-1}\alpha_{n}+p_{n-2}}{q_{n-1}\alpha_{n}+q_{n-1}} \Rightarrow\\
+        \alpha_{n} &= \frac{q_{n-2}\alpha -p_{n-2}}{-q_{n-1}\alpha +p_{n-1}}
+           \qquad (-I~\text{operiert trivial})\\
+        \alpha_{n}' &= \frac{q_{n-2}\alpha' -p_{n-2}}{-q_{n-1}\alpha'+p_{n-1}}
+           = -\frac{q_{n-2}}{q_{n-1}} \frac{\alpha' - \frac{p_{n-2}}{q_{n-2}}}
+           {\alpha' -\frac{p_{n-1}}{q_{n-1}}}
+      \end{align*}
+      Der rechte Bruch geht gegen 1, also $\alpha_{n}'<0$ für $n\gg1$.
+      $\alpha_{n}>1$ ist klar.
+
+      \begin{align*}
+        \alpha_{n}' &= -\frac{q_{n-2}}{q_{n-1}} (\underbrace{\frac{\alpha' -
+           \frac{p_{n-1}}{q_{n-1}}}{\alpha' - \frac{p_{n-1}}{q_{n-1}}}}_{=1} +
+           \frac{\frac{p_{n-1}}{q_{n-1}} - \frac{p_{n-2}}{q_{n-2}}} {\alpha' -
+             \frac{p_{n-1}}{q_{n-1}}})\\
+        &= -\frac{q_{n-2}}{q_{n-1}} ( 1+
+           \frac{(-1)^{n}}{q_{n-1}q_{n-2}(\alpha' - \frac{p_{n-1}}{q_{n-1}})})\\
+        &= -\frac{1}{q_{n-1}} ( \frac{(-1)^{n}}{q_{n-1} (\alpha' -
+           \frac{p_{n-1}}{q_{n-1}})})\\
+        \intertext{$\Rightarrow$}
+        \alpha_{n+1}' &= \frac{1}{q_{n-1}} (\underbrace{q_{n-1} -
+           q_{n-2}}_{\geq1} -
+           \underbrace{\frac{(-1)^{n}}{q_{n-1}(\alpha'-\frac{p_{n-1}}{q_{n-1}})}}
+           _{\rightarrow 0})
+      \end{align*}
+      $\Rightarrow$ $\alpha_{n}'+1>0$ für $n\gg1$.
+    \end{enumerate}
+  \end{proof}
+\end{fakt}
+
+\begin{defini}
+  $[a_{0}; a_{1},\dotsc, a_{n}]$ heißt \highl{periodisch} \gdwdef $\exists
+  k>0, n_{0}\in\N$, so dass $\forall n\geq n_{0}$ $a_{n+k}= a_{n}$. Das
+  minimale $k$ heißt \highl{Periode}.
+
+  Der Kettenbruch heißt \highl{reinperiodisch} \gdwdef für alle $n\geq0$ gilt
+  $a_{n+k}=a_{n}$.
+
+  Schreibweise: $[a_{0}; a_{1},\dotsc, a_{r}, \overline{a_{r+1},\dotsc,
+  a_{r+k}}]$ respektive $[\overline{a_{0}; a_{1},\dotsc, a_{k-1}}]$.
+\end{defini}
+
+\begin{bsp}
+  \begin{align*}
+    \sqrt{3} &= 1+ \sqrt{3} -1\\
+    \frac{1}{\sqrt{3}-1} = \frac{\sqrt{3}+1}{2} = 1 + \frac{\sqrt{3}-1}{2}\\
+    \frac{2}{\sqrt{3}-1} &= \frac{2(\sqrt{3}+1)}{2} = \sqrt{3}+1 = 2+(\sqrt{3}-1)\\
+    \sqrt{3} = [1;\overline{1,2}]\\
+    \sqrt{3}-1 = [\overline{1,2}]
+  \end{align*}
+\end{bsp}
+
+\begin{satz}[Euler, Lagrange]
+  \begin{enumerate}
+   \item Für alle $\alpha\in K\setminus\Q$ ist die Kettenbruchentwicklung
+    periodisch
+   \item Ist $\alpha$ reduziert, so ist sie reinperiodisch.
+  \end{enumerate}
+
+  \begin{proof}
+    \begin{enumerate}
+     \item Für $n\gg1$ ist $\alpha_{n}$ reduziert und hat dieselbe
+      Diskriminante wie $\alpha$, als sind dises $\alpha_{n}$ aus einer
+      endlichen Menge $\Rightarrow$ $\exists n,k$, so dass
+      $a_{n+k}=a_{n}$ $\Rightarrow$
+      $a_{m+k}=a_{m}\;\forall m\geq n$.
+
+     \item Ist $\alpha$ reduziert, so auch alle $\alpha_{n}$.
+      \begin{gather*}
+        \alpha_{n} = [\alpha_{n}] + \frac{1}{\alpha_{n+1}}
+      \end{gather*}
+      Wir zeigen: Sind $\alpha, \beta$ reduziert und $\alpha=
+      N+\frac{1}{\beta}$ mit positiven natürlichen Zahlen $N$, so gilt
+      $N=[-\frac{1}{\beta'}]$.
+
+      Hieraus würde folgen: $\alpha_{n}$ ist eindeutig bestimmt durch
+      $\alpha_{n+1}$
+      \begin{gather*}
+        \alpha > 1, -1 < \alpha' < 0 \Leftrightarrow -\frac{1}{\alpha'} > 1\\
+        \beta > 1, -1 < \beta' < 0 \Leftrightarrow -\frac{1}{\beta'} > 1
+      \end{gather*}
+      $-\frac{1}{\beta'} = N-\alpha' = N+\frac{1}{-\frac{1}{\alpha'}}
+      \Rightarrow [-\frac{1}{\beta'}] = N$
+      Somit folgt aus $\alpha_{n+k}=\alpha_{n}$ auch
+      $\alpha_{n-1+k}=\alpha_{n-1}$ und damit $a_{n-1+k}=a_{n-1}$
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Die Umkehrung gilt auch: Jeder periodische Kettenbruch konvergiert gegen
+  eine quadratische Irrationalität.
+
+  Rein periodisch gegen reduzierte.
+  \begin{gather*}
+    \alpha = [\overline{a_{0}; a_{1},\dotsc, a_{n}}] \Rightarrow
+       \alpha=[a_{0},\dotsc, a_{n},\alpha]
+  \end{gather*}
+  $\Rightarrow \alpha = g\alpha$ für eine $g\in GL_{2}\Z$.
+
+  $\alpha=g\alpha$ ist quadratische Gleichung für $\alpha$.
+\end{bemerk}
+
+\begin{fakt}
+  Ist $\alpha$ reduziert und $\alpha=[\overline{a_{0},\dotsc, a_{k-1}}]$, so
+  ist $-\frac{1}{\alpha'} = [\overline{a_{k-1},a_{k-2},\dotsc, a_{0}}]$.
+
+  \begin{proof}
+    $\alpha_{n}= a_{n}+\frac{1}{\alpha_{n+1}}$ $\Rightarrow$
+    $-\frac{1}{\alpha_{n+1}'} = a_{n} + (-\alpha_{n}')$ $\Rightarrow$
+    $a_{n}=[-\frac{1}{\alpha_{n+1}'}]$ ($0< -\alpha_{n}'<1$ wegen Red.)
+
+    Also $-\frac{1}{\alpha_{k}'} = [a_{k},a_{k-1},\dotsc, a_{0},
+    -\frac{1}{\alpha'}]$ Nun ist $\alpha_{k}=\alpha$ $\Rightarrow$
+    $-\frac{1}{\alpha} = [a_{k-1},\dotsc, a_{0},-\frac{1}{\alpha'}]$
+    $\Rightarrow$ $-\frac{1}{\alpha'} = [\overline{a_{k-1}, \dotsc, a_{0}}]$.
+  \end{proof}
+\end{fakt}
+
+\begin{fakt}
+  Ist $\alpha=\sqrt{D}$ mit Nichtquadrat~$D>1$, so gilt mit $g=[\sqrt{D}]$:
+  \begin{gather*}
+    \alpha = [g, \overline{a_{1},\dotsc, a_{k-1}, 2g}] = [g,
+       \overline{a_{k-1},\dotsc, a_{1}, 2g}]
+  \end{gather*}
+
+  \begin{proof}
+    $\alpha=g+\frac{1}{\alpha_{1}}, \alpha_{1}>1, -\frac{1}{\alpha_{1}'} =
+    g+\alpha$ wegen $\alpha' = -\alpha$. Somit ist $-\frac{1}{\alpha_{1}'} >
+    2g >1$ und damit ist $\alpha_{1}$ reduziert. $[-\frac{1}{\alpha_{1}'}]=2g$
+    \begin{gather*}
+      \alpha_{1} = [\overline{a_{1},\dotsc, a_{k}}], -\frac{1}{\alpha_{1}} =
+         [\overline{a_{k},\dotsc, a_{1}}], a_{k}=2g\\
+      \Rightarrow
+         \alpha = -\frac{1}{\alpha_{1}'} - g = [\underbrace{a_{k}-g}_{=g},
+         \overline{a_{k-1},\dotsc, a_{1}, 2g}]
+    \end{gather*}
+  \end{proof}
+\end{fakt}
+
+\begin{fakt}
+  Sei $D>1$ quadratfrei, $D\equiv 2,3\pmod{4}$. Dann ist für $\sqrt{D} = [g;
+  \overline{a_{1},\dotsc, a_{k-1}, 2g}]$ die Zahl
+  $\epsilon=p_{k-1}+q_{k-1}\sqrt{D}$ eine Einheit.
+
+  \begin{proof}
+    \begin{align*}
+      \sqrt{D} &= [g; a_{1},\dotsc, a_{k-1}, [2g, a_{1},\dotsc, a_{?}]]\\
+      & = [g; a_{1},\dotsc, a_{k-1}, \sqrt{D}+g]\\
+      & = \frac{p_{n-1}(g+\sqrt{D})+p_{n-2}}{q_{k-1}(g+\sqrt{D}+q_{k-2})}\\
+      \Rightarrow&
+         \sqrt{D}(q_{k-1}g + q_{k-2}+q_{k-1}\sqrt{D}) =
+         p_{k-1}g+p_{k-2}+p_{k-1}\sqrt{D}\\
+      \Rightarrow&
+         Dq_{k-1} = p_{k-1}g+p_{k-2}\qquad q_{k-1}\\
+      p_{k-1} = q_{k-1}g+q_{k-2}\qquad p_{k-1}\\
+      p_{k-1}^{2} - D q_{k-1}^{2} = p_{k-1}q_{k-2}-p_{k-2}q_{k-1} = (-1)^{k}
+    \end{align*}
+    $\Rightarrow \epsilon=pk_{-1}+q_{k-1}\sqrt{D}$ ist Einheit.
+  \end{proof}
+\end{fakt}
+
+\begin{bemerk}
+  Die Periodenlänge ist $\leq 2D$.
+
+  Wie groß kann eine Fundamentaleinheit werden? $\ln \epsilon_{D}\leq
+  \sqrt{D}, \epsilon_{D} \leq e^{\sqrt{D}}$.
+\end{bemerk}
 
 \clearpage
 \pdfbookmark[0]{Index}{index}
