• skript.latex   · Die Vorlesung von heute 5.12.
git-svn-id: https://svn.lug-jena.de/uni-skripte@592 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-zahlen/skript.latex
+++ b/haberland-zahlen/skript.latex
@@ -3780,6 +3780,304 @@ $\N \ideal = bc$
   Also $(4+ \sqrt{-5} ) = \ideal[p]_{1}' \ideal[p]_{2}$ und $(4- \sqrt{-5}) =
   \ideal[p]_{1} \ideal[p]_{2}'$.
 \end{bsp}
+
+% 5.12.
+
+\section{Das Zerlegungsgesetz in quardatischen Zahlenkörpern}
+
+Wie zerfallen die Primzahlen aus $\Z$ in $O_{K}$? Wir hatten es schon mit
+elementaren Methoden für $K=\Q(\sqrt{-1})$ gesehen.
+
+\begin{bemerk}
+  Sei $\nicefrac{K}{\Q}$ quadratisch, $p\in\PZ\subset\Z$, $\N(pO_{K}) =p^{2}$.
+  Also gibt es nur drei Möglichkeiten:
+  \begin{itemize}
+   \item $pO_{K} = \ideal^{2}, \N\ideal = p$,
+   \item $pO_{K}$ ist prim oder
+   \item $pO_{K} = \ideal_{1}\ideal_{2}, \ideal_{1}\ne \ideal_{2}$.
+  \end{itemize}
+  Da auch $\ideal_{1}'$ das Ideal $pO_{K}$ teil, gilt $\ideal_{1}' \ne
+  \ideal_{2}$ oder $\ideal_{1}' = \ideal_{2}', \ideal_{2}'=\ideal_{2}$.
+
+  Aber $\ideal_{1}\cdot\ideal_{1}' = pO_{K}$ (letzte Vorlesung) $\Rightarrow$
+  $\ideal_{1}' = \ideal_{2}$.
+\end{bemerk}
+
+\begin{defini}
+  Sei $p\in\PZ$
+  \begin{enumerate}
+   \item $p$ heißt \highl{verzeweigt} in $K$ \gdwdef $pO_{K} = \ideal^{2}$
+   \item $p$ heißt \highl{zerlegt} in $K$ \gdwdef $pO_{K} =
+    \ideal\cdot\ideal'$, $\ideal\ne\ideal'$
+   \item $p$ heißt \highl{träge} (engl. inert) in $K$ \gdwdef $pO_{K}$ ist
+    Primideal
+  \end{enumerate}
+\end{defini}
+
+\begin{bemerk}
+  Für 1. gilt $\N\ideal = p$. Für 2. gilt $\N\ideal = p=\N\ideal'$ Für $\N
+  pO_{K} = p^{2}$
+\end{bemerk}
+
+\begin{bsp}
+  In $\Z[i]$ ist zwei verzweigt, die $p\equiv 1\pmod{4}$ zerlegt, die $p\equiv
+  3\pmod{4}$ träge.
+\end{bsp}
+
+\begin{fakt}
+  $K=\Q(\sqrt{D_{K}}), D_{K}\in\Z, \ne0,1$ quadratfrei, Sei $p>2$ prim.
+  \begin{enumerate}
+   \item $p$ verzeigt \gdw $p\mid D_{K}$ \gdw $(\frac{D_{K}}{p}) =0$,
+   \item $p$ zerlegt \gdw $(\frac{D_{K}}{p})=1$
+   \item $p$ träge \gdw $(\frac{D_{K}}{p}) =-1$
+  \end{enumerate}
+
+  \begin{proof}
+    \begin{enumerate}
+     \item Sei $pO_{K}=\ideal^{2}$ also $\N\ideal=p^{2}$.
+      \begin{gather*}
+        \ideal=\Z(a+b\omega) + \Z c, bc=p, b\mid c
+      \end{gather*}
+      $\Rightarrow$ $b=1, c=p$. Weiter ist $\ideal'=\ideal$
+      ($\ideal^{2}=(\ideal')^{2} \Rightarrow \ideal = \ideal'$) Für
+      $D_{K}\equiv2,3\pmod{4}$ ist $\omega=\sqrt{D_{K}}$, also
+      $\omega'=-\omega$.
+
+      $\ideal=\ideal'=\Z(a-b\omega) + \Z c = \Z(-a+b\omega) + \Z c$. Wegen der
+      Eindeutigkeit der kannonischen Basis folgt $a=0$. Für $D_{K}\equiv
+      1\pmod{4}$ ist $\omega'=\frac{1-\sqrt{D_{K}}}{2}=1-\omega$.
+
+      Also ist
+      \begin{align*}
+        \ideal = \ideal' & = \Z(a+b(1-\omega)) + \Z c\\
+        & = \Z(a+b-b\omega) + \Z c\\
+        & = \Z(-a-b+b\omega) + \Z c\\
+        \ideal & = \Z(a+b\omega) + \Z c
+      \end{align*}
+      $\Rightarrow$ $-a-b \equiv a\pmod{c}$ $\Rightarrow$ $2a\equiv-1\pmod{p}$
+      $\Rightarrow$ $a=\frac{p-1}{2}$. Wir haben noch $bc\mid N(a+b\omega)
+      \Rightarrow p\mid N(a+\omega)$.
+
+      Ist $D_{K}\equiv2,3\pmod{4}$, so ist $a=0$, also $N(a+\omega) = -D_{K}$
+      $\Rightarrow$ $p\mid D_{K}$.
+
+      Ist $D_{K}\equiv 1\pmod{4}$, so ist
+      \begin{align*}
+        N(\frac{p-1}{2}+\omega)  &=
+           (\frac{p-1}{2}+\omega)(\frac{p-1}{2}+\omega')\\
+        & = (\frac{p-1}{2})^{2} + \frac{p-1}{2}(\omega+\omega') + \omega\omega'\\
+        & \frac{1}{4} (p^{2}-2p+1+2p-2+1-D_{K})\\
+        & = \frac{1}{4} (p^{2}-D_{K})
+      \end{align*}
+      $p\mid \frac{1}{4}(p^{2}-D_{K})$ $\Rightarrow$ $p\mid D_{K}$.
+
+     \item Sei $p\mid D_{K}$. Definier $\ideal := \Z\omega+\Z p$ für
+      $D_{K}\equiv2,3\pmod{4}$ und $\ideal :=\Z(\frac{p-1}{2}+\omega) + \Z p$
+      für $D_{K}\equiv1\pmod{4}$.
+
+      Dann ist $\N\ideal = p$ ($=bc$ für die kannaonischen Basen). Also ist
+      $\ideal$ eine Primideal.
+
+      Weiter ist $\ideal' = \ideal$: Klar im ersten Fall.
+      \begin{multline*}
+        \frac{p-1}{2} + \omega' = \frac{p-1}{2} + \frac{1-\sqrt{D_{K}}}{2} =
+           \frac{p-1}{2} + 1 -\omega\\
+         = -(-\frac{p-1}{2} + \omega) = -(-p+\frac{p-1}{2}+w)
+      \end{multline*}
+      $\Rightarrow$ $\ideal' = \ideal$.
+
+      $\ideal\ideal' = pO_{K}$ $\Rightarrow$ $pO_{K} = \ideal^{2}$.
+
+     \item Sei $p$ träge, also $pO_{K} = \ideal$ -- Primideal. $\ideal$ hat
+      kanonische Basis: $a=0, b=c=p$:
+      \begin{gather*}
+        \ideal = \Z p\omega + \Z p
+      \end{gather*}
+      Für $O_{K}\equiv2,3\pmod{4}$ ist $\omega^{2}=D_{K}$.
+
+      $\nicefrac{O_{K}}{pO_{K}}$ (ein Körper aus $p^{2}$ Elementen) ist
+      quadratische Erweiterungskörper von $\nicefrac{\Z}{p\Z}=\F_{p}$.
+
+      $\nicefrac{O_{K}}{pO_{K}}=\F_{p}\cdot\overline{\omega} + \F_{p},
+      \overline{\omega}=Bild von \omega$, d.\,h. $\overline{1}$ und
+      $\overline{\omega}$ bilden $\F_{p}$-Basis von
+      $\nicefrac{O_{K}}{pO_{K}}$. Demnach ist $\overline{\omega}$ kein Element
+      aus $\F_{p}$. Also ist $\overline{D_{K}} = \overline{\omega}^{2}$.
+      $\Rightarrow$ $(\frac{D_{K}}{p}) = -1$. $D_{K}\equiv1\pmod{4}$ analog.
+
+     \item Sei $(\frac{D_{K}}{p})=-1$ und $\ideal:= pO_{K}$.
+      Jedenfalls ist $\N\ideal = p^{2}$. Eir zeigen:
+      $\nicefrac{O_{K}}{pO_{K}}$ hat keine Nullteiler (das impliziert $\ideal$
+      prim). Sei $(r+s\omega)(t+u\omega)\in pO_{K}$, zu zeigen ist, dass
+      wenigstens ein Faktor auch in $pO_{K}$ liegt.
+
+      Indirekt: beide nicht in $pO_{K}$.
+      \begin{faelle}
+       \item $D_{K}\equiv 2,3\pmod{4}$.
+        \begin{gather*}
+          rt+(st+ru)\omega + D_{K} su \in pO_{K}\\
+          \Rightarrow rt+su D_{K}\equiv 0\pmod{p}\qquad |\cdot s\\
+          st + ru \equiv0\pmod{p}\qquad |\cdot r\\
+          \Rightarrow (r^{2}-s^{2} D_{K})_{u} \equiv 0\pmod{p}
+        \end{gather*}
+        Sei $p\mid u$ $\Rightarrow$ $p\mid st$ und $p\mid rt$. $p$ teilt
+        höchstene eine der Zahlen $r$ und $s$ $\Rightarrow$ $p\mid t$
+        \lightning{} weil $p$ sonst bereits in $O_{K}$ wäre. Mithin $p\mid
+        (r^{2}-D_{K}s^{2})$.
+      \end{faelle}
+      Angenommen $p\mid s$, dann $p\mid ru$ und $p\mid rt$ $\Rightarrow$
+      $p\mid r$ \lightning{} wie eben.
+
+      Es folgt nun daraus, dass $D_{K}\equiv (\frac{r}{s})^{2}\pmod{p}$
+      $\Rightarrow$ $(\frac{D_{K}}{p}) = 1$. \lightning{}, da wir
+      vorrausgesetzt hatten, dass $? = -1$.
+
+     \item $D_{K}\equiv 1\pmod{4}$ analog.
+    \end{enumerate}
+  \end{proof}
+\end{fakt}
+
+\begin{bsp}
+  $K=\Q(\sqrt{-2006})$, $D_{K}=-2006 = -2\cdot 1003 = -2\cdot 17\cdot 59$.
+
+  Ist $p=23$ träge oder reduziert?
+  \begin{multline*}
+    \big(\frac{-2006}{23}\big) = (\frac{2300-2006}{23}) = (\frac{294}{23}) =
+       (\frac{64}{23}) = (\frac{-5}{23}) = (\frac{-1}{23}) (\frac{5}{23}) =
+       -(\frac{5}{23}) = -(\frac{23}{5}) = -(\frac{3}{5}) = 1
+  \end{multline*}
+  $\Rightarrow$ 23 ist zerlegt.
+\end{bsp}
+
+\begin{fakt}
+  Sei $d_{K}$ die Diskiminante von $\Q(\sqrt{D_{k}})$.
+  \begin{enumerate}
+   \item 2 ist verzweigt in $K$ \gdw $2\mid d_{K}$
+   \item 2 ist träge in $K$ \gdw $d_{K}\equiv 5\pmod{8}$
+   \item 2 ist zerlegt in $K$ \gdw $d_{K}\equiv 1\pmod{8}$
+  \end{enumerate}
+
+  \begin{proof}
+    Sei 2 träge in $K$, d.\,h. $2O_{K}$ ist Primideal. Dann ist $d_{K}$
+    ungerade wegen (i), also $D_{K}\equiv1\pmod{4}$, sowie $d_{K}=D_{K}$.
+    \begin{gather}\label{eq:6}
+      \omega^{2} = (\frac{1+\sqrt{D_{K}}}{2})^{2} = \frac{D_{K}+1 +
+         2\sqrt{D_{K}}}{4} = \frac{D_{K}-1}{4} +\omega
+    \end{gather}
+    $\Rightarrow$ $\nicefrac{O_{K}}{2O_{K}}$ ist ein Körper aus 4 Elementen:
+    $\overline{0},\overline{1},\overline{\omega},
+    \overline{1}+\overline{\omega}$.
+
+    \autoref{eq:6} liefert $\overline{\omega}^{2} =
+    \overline{(\frac{D_{K}-1}{4})} + \overline{\omega}$.
+
+    Angenommen $\frac{D_{K}-1}{4}$ ist gerade, dann folgt
+    $\overline{\omega}^{2}=\overline{\omega}$ $\Rightarrow$
+    $\overline{\omega}(\overline{\omega}-1) = 0$ \lightning{}
+
+    Somit ist $\frac{D_{K}-1}{4}$ ungerade $\Rightarrow$ $D_{K}\equiv
+    5\pmod{8}$.
+
+    Das war nur eine von vier Implikationen. Die anderen drei selber machen!
+  \end{proof}
+\end{fakt}
+
+\begin{fakt}
+  Sei $m\geq 2$ und $\phi\colon\Z\rightarrow\C^{*}\cup\{0\}$, so dass
+  \begin{enumerate}
+   \item Für alle $(a,m)>1$ ist $\phi(a) = 0$.
+   \item Für alle $a\in\Z$ ist $\phi(a+m) = \phi(a)$
+   \item $\phi(ab) = \phi(a)\phi(b)$ $\forall a,b\in\Z$
+   \item $\phi(1)=1$
+  \end{enumerate}
+
+  Dann induziert $\phi$ einen Dirichlet-Charakter modulo $m$. Umgekehrt
+  induziert jeder Dirichlet-Charakter modulo $m$ via Fortsetzung durch 0 einen
+  solche Funktion auf $\Z$.
+
+  \begin{proof}
+    $\chi(\overline{a}) := \phi(a)$ für $\overline{a}\in(\nicefrac{\Z}{m\Z})^{*}$
+  \end{proof}
+\end{fakt}
+
+\begin{defini}
+  $\chi_{K}\colon \N^{*}\rightarrow\{-1,0,1\}$ sei definiert durch
+  \begin{gather*}
+    \chi_{K}(p) =
+       \begin{cases}
+         (\frac{D_{K}}{p})& p>2\\
+         +1& p=2, d_{K}=D_{K}\equiv1\pmod{8}\\
+         -1& p=2, d_{K}=D_{K}\equiv5\pmod{8}\\
+         0& p=2, 2\mid d_{K}
+       \end{cases}
+  \end{gather*}
+  und dann multiplikativ fortsetzen.
+\end{defini}
+
+\begin{fakt}
+  $\chi_{K}$ ist eine Dirichlet-Charakter modulo $\abs{d_{K}}$. Er heißt
+  \highl{Charakter von $K$}.
+
+  \begin{proof}
+    \begin{gather*}
+      \begin{array}{c|ccc}
+        D_{K}& -1& 2& -2\\
+        \hline
+        d_{K}& -4& 8& -8
+      \end{array}
+    \end{gather*}
+
+    Es gibt genau einen nicht trivialen Dirichlet-Charakter modulo 4
+    \begin{gather*}
+      \begin{array}{c|cc}
+        n& 1& 3\\
+        \hline
+        \chi(n)& 1& -1
+      \end{array}
+    \end{gather*}
+    $\chi_{\Q(i)}(p) = (\frac{-4}{p}) = (\frac{-1}{p}) = (-1)^{\frac{p-1}{2}}$
+    für $p>2$. $\chi_{\Q(i)}$ und $\chi$ stimmen auf den primzahlen $p>2$
+    überein und sind beide Null auf den geraden natürlichen Zahlen
+    $\Rightarrow$ sind gleich auf $\N^{*}$.
+
+    Setze $\chi_{\Q(i)}$ durch $\chi$ auf $\Z$ fort unf nenne es $\chi_{-4}$.
+    Es gibt nicht triviale Charaktere modulo 8.
+    \begin{gather*}
+      \begin{array}{c|cccc@{\quad}l}
+        & 1& 3& 5& 7\\
+        \hline
+        \phi_{1}& 1& -1& 1& -1 & \leftarrow
+           \text{kommt von obigem $\chi\pmod{4}$}\\
+        \phi_{2}& 1& -1& -1& 1\\
+        \phi_{3}& 1& 1& -1& -1
+      \end{array}
+    \end{gather*}
+    \begin{gather*}
+      \chi_{\Q(\sqrt{2})}(p) = (\frac{8}{p}) = (\frac{2}{p}) =
+         (-1)^{\frac{p^{2}-1}{8}} =\phi_{2}(p) \quad (p>2)\\
+      \chi_{\Q(\sqrt{-2})}(p) = (\frac{-8}{p}) = (\frac{-2}{p}) =
+         (-1)^{\frac{p^{2}-1}{8}+\frac{p-1}{2}} = \phi_{3}(p)
+    \end{gather*}
+    $\Rightarrow$ $\chi_{8} = \chi_{\Q(\sqrt{2})} = \phi_{2}$ auf $\Z$.
+    $\chi_{-8} = \chi_{\Q(\sqrt{-2})} =\phi_{3}$ auf $\Z$.
+
+    Sei nun $K=\Q(\sqrt{D_{K}})$.
+    \begin{gather*}
+      D_{K}=(-1)^{\epsilon} 2^{\eta}p_{1}\dotsm p_{r}\qquad \epsilon,\eta\in
+         \{0,1\}, p_{j}>2
+    \end{gather*}
+    Sei weiter $p\ne2, p\ne p_{j} \forall j$.
+    \begin{align*}
+      \chi_{K}(p) & =(\frac{D_{K}}{p}) = (\frac{-1}{p})^{\epsilon}
+         (\frac{2}{p})^{\eta} (\frac{p_{1}}{p}) \dotsm (\frac{p_{r}}{p})\\
+      & = \chi_{-4}(p)^{\epsilon} \chi_{8}(p)^{\eta} (-1)^{\frac{p-1}{2} \cdot
+         \sum_{i} \frac{p_{i}-1}{2}} (\frac{p}{p_{1}})\dotsm (\frac{p}{p_{r}})\\
+      & = \chi_{-4}(p)^{\epsilon + \sum_{i} \frac{p_{i}-1}{2}}
+         \chi_{8}(p)^{\eta} \cdot (\frac{p}{p_{1}}) \cdot (\frac{p}{p_{r}})
+    \end{align*}
+  \end{proof}
+\end{fakt}
+
 \clearpage
 \pdfbookmark[0]{Index}{index}
 \printindex
