Rechtschreibfehler gefunden und behoben
git-svn-id: https://svn.lug-jena.de/uni-skripte@593 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -1507,7 +1507,7 @@ Hieraus folgt $A=M^{-1}C$ und weiter $b= c_{0}-m_{0}A$.
 
 \section{Blockchiffren -- Allgemeines}
 
-Wir bleiben zunächst noch bei den symetrischen Verschlüsselungsverfahren und
+Wir bleiben zunächst noch bei den symmetrischen Verschlüsselungsverfahren und
 versuchen durch eine Vergrößerung des Schlüsselraums die Verfahren sicherer zu
 machen. Im Folgenden beschränken wir uns auf (rechnerfreundliche) Bitfolgen
 $\subset\Z_{2}^{n}$.
@@ -1523,7 +1523,7 @@ Metaebene:
   Verschlüsselung.
 \end{itemize}
 
-Diese Bilder von Blöcken der Länger~$n$ sind wieder Blöcke der Länge~$n$ über
+Diese Bilder von Blöcken der Länge~$n$ sind wieder Blöcke der Länge~$n$ über
 $\Z_{2}$.
 
 Daraus ergibt sich eine maximale Anzahl an Blockchiffren von
@@ -1565,7 +1565,7 @@ Aufgabe:
 \end{gather*}
 verschiede Matrizen~$A$ mit $\det A=1$.
 
-Hintereinanderschaltung von Blockchiffren \textit{verscheidenen} Typs führen
+Hintereinanderschaltung von Blockchiffren \textit{verschiedenen} Typs führen
 zu einer Erhöhung der Sicherheit. Oft realisiert man abwechselnde Folge von
 Substitutionen und Transpositionen mit den Ziel folgende \highl{Eigenschaften
 der Verschlüsselung} zu erreichen:
@@ -2027,7 +2027,7 @@ für $K_{4}^{L}$ bzw. $K_{4}^{R}$. Dort, wo die Annahme falsch ist (die
 Mehrzahl der Fälle), erhalten wir irgendwelche (zufälligen) Bitfolgen von
 acht Bits.
 
-\section{Sie Sicherheit von DES}
+\section{Die Sicherheit von DES}
 
 \begin{enumerate}
  \item Die Größe des Schlüsselraums ist $2^{56}$ (es güngig aber
